# repository-assistant-service

./: .gitignore  Dockerfile  Dockerfile-dev  README.md  docker-compose.yaml  pyproject.toml
conf/: .secrets.toml.example  file-types.json  keycloak.toml  settings.toml
resources/concept/: ohsmart-demo-sword.json  ohsmart-local-sword.json  ohsmart.json  ssh.json
resources/repo-schemas/: 4tu.json  dataversenl.json  ohsmart.json  ssh.json
resources/saved-repos-conf/: dar-sword.json  demo-archaeology-sword.json  faircore4eosc-swh_dev-dataverse_demo.json  odissei-listrecords.json  odissei-nodelete.json  odissei.json  ohsmart-demo-new.json  ohsmart-local-new.json  ohsmart-to-DV-demossh-DV.json  poc-odissei-dv.json  ps.json  ras_cid-to-dv.json  ras_cid-to-file.json  ras_cid-to-mail.json  rda-zenodo-local-new.json  save-to-file.json
resources/saved-repos-conf.old/: dar-sword.json  demo-archaeology-sword.json  zenodo-zanbox.json
src/: commons.py  main.py  protected.py  public.py
src/frontend/ras-generator/: README.md  package-lock.json  package.json
src/frontend/ras-generator/src/: App.jsx  App.tsx  RASGenerator.jsx
src/frontend/ras-generator/src/RASConfig/: Enrichment.jsx  EnrichmentNotification.jsx  FileConversion.jsx  RASGenerator.jsx  Target.jsx
src/models/: assistant_datamodel.py  request_advice_model.py
tests/: locustfile.py
