[project]
name = "repository-assistant-service"
version = "0.3.3"
description = "Recommend repository or repositories based on deposit attributes<br/>Recommend metadata schema and profile based on repository, format and domain"
authors = [{name = "Eko Indarto", email = "eko.indarto@dans.knaw.nl"}]
readme = "README.md"
title = "Repository Selection and Advice Service"  #
requires-python = ">=3.12.8"
dependencies = [
    "akmi-utils>=0.1.5.2",
    "dynaconf>=3.2.9",
    "emoji>=2.14.1",
    "jmespath>=1.0.1",
    "json-logic>=0.6.3",
    "python-keycloak>=4.2.2"
]
